--- a/exercises/color-palettes/css/style.css
+++ b/exercises/color-palettes/css/style.css
@@ -5,14 +5,14 @@
 
 #palette-1-color-1 {
     background-color: green;
-    color: lightgreen;
+    color: #ffd700;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     padding: 24px;
 }
 
 #palette-color-2 {
-    ;
+    background-color: red;
     color: 4E8098;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
@@ -21,7 +21,7 @@
 
 #palette-color-3 {
     background-color: black;
-    color: lightseagreen;
+    color: #add8e6;
     font-family: Georgia, 'Times New Roman', Times, serifS;
     text-align: center;
     padding: 24px;
