--- a/projects/html-potluck/license/css/style.css
+++ b/projects/html-potluck/license/css/style.css
@@ -8,8 +8,8 @@
 */
 #license {
     width: 700px;
-    border: 3px solid;
-    border-radius: 10px ;
+    border: 3px solid black;
+    border-radius: 24px ;
     padding: 24px;
     }
 
@@ -19,30 +19,36 @@
 }
 #right-side {
     display: inline-block;
-    width: 65%;
+    width: 34%;
 }
 #id-and-expiration div {
     display: inline-block;
 }
-#personal-info {
+#personal-info
+#small-pic-ontainer,
+#data-fields {
     display: inline-block;
 }
-#small-pic-container {
-
-
+#small-pic-container img {
+    width: 80px;
 }
-#data-left #data-right {
+#data-left
+#data-right {
     display: inline-block;
-
 }
+
 #signature {
     display: inline-block;
     width: 34%;
 }
-#right-side {
+#right-side img {
+    display: inline-block;
     width: 100%;
+    
 }
-#donorreal-id {
+
+#donor
+#real-id {
     display: inline-block;
 }
 
