--- a/projects/html-potluck/license/css/style.css
+++ b/projects/html-potluck/license/css/style.css
@@ -6,6 +6,9 @@
 
     Good luck, and have fun!
 */
+#content h1 {
+    color:blue;
+}
 #license {
     width: 700px;
     border: 3px solid black;
@@ -30,7 +33,7 @@
     display: inline-block;
 }
 #small-pic-container img {
-    width: 80px;
+    width: 150px;
 }
 #data-left
 #data-right {
@@ -43,7 +46,7 @@
 }
 #right-side img {
     display: inline-block;
-    width: 100%;
+    width: 70%;
     
 }
 
