--- a/exercises/themed-gallery-page/css/style.css
+++ b/exercises/themed-gallery-page/css/style.css
@@ -1,15 +1,18 @@
 * {
-    box-sizing: border-box;
+    box-sizing: border-box
 }
+
 body {
-    margin: 0px;
+    margin-right: 100px;
     font-family: sans-serif;
 }
 
+
 #layout {
-    max-width: 100px;
-    margin: 24px auto;
+    max-width: 800px;
+    margin: 48px auto;
     text-align: center;
+    background-color: bisque;
 }
 
 .basic-grid-gallery {
@@ -18,13 +21,42 @@ body {
     gap: 24px; 
 
     padding: 24px;
-    border: 12px solid #333333;
-    width: 48px;
+    border: 10px solid black;
 }
 
 .basic-grid-gallery img {
-    width: 100px;
+    width: 100%;
 }
+
+.cropped-grid-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+    grid-auto-rows: 200px; 
+
+    padding: 24px;
+    border: 10px solid #333333;
+    background-color: lightblue;
+}
+
+
+.cropped-grid-gallery img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
