--- a/projects/portfolio/css/style.css
+++ b/projects/portfolio/css/style.css
@@ -1,65 +1,93 @@
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 body {
-    margin-right: 100px;
-    font-family: sans-serif;
+    margin: 0px;
+    font-family: sans-serif; 
 }
-
-#hero-1 {
-    background-image: url("../images/Crying\ Out.png");
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+ 
+#two-columns {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
 }
 
+#column-1,
+#column-2 {
+    flex: 1;
+}
 
-#hero-1 h1 {
-    font-size: 10vw; 
+#column-1 {
+    background-color: lightgreen;
+}
+
+#column-2 {
+    background-color: #37d37b;
 }
 
 #layout {
+    background-color: goldenrod;
     max-width: 800px;
     margin: 48px auto;
     text-align: center;
 }
 
-.basic-grid-gallery {
+.cropped-grid-gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 24px; 
-
+    grid-auto-rows: 200px;
     padding: 24px;
     border: 10px solid #333333;
 }
 
-.basic-grid-gallery img {
-    width: 100%;
-}
-
-.cropped-grid-gallery {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    
-    grid-auto-rows: 200px; 
-
-    padding: 8px;
-    border: 12px solid darkblue;
-}
-
-
 .cropped-grid-gallery img {
     width: 100%;
-    height: 100%; 
+    height: 100%;
     object-fit: cover;
 }
 
+* {
+    box-sizing: border-box
+}
 
+body {
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+.single-column {
+    min-width: 600px;
+    max-width: 1200px;
+    margin: 0px auto;
+}
+
+#card-section {
+    background-color: #5b00ed;
+    color: #bfefff;
+    padding: 48px;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    flex: 1;
+    border: 3px solid #bfefff;
+    padding: 36px;
+    text-align: center;
+    margin: 36px;
+}
+
+.card h3 {
+    font-size: 12px;
+    margin: 0px;
+}
+
+.card p {
+    font-size: 12px;
+    margin: 24px 0px 0px;
+}
 
 
 
