--- a/projects/portfolio/css/style.css
+++ b/projects/portfolio/css/style.css
@@ -25,7 +25,8 @@ body {
 }
 
 #layout {
-    background-color: goldenrod;
+    background-color: darkolivegreen;
+    color: blue;
     max-width: 800px;
     margin: 48px auto;
     text-align: center;
@@ -35,8 +36,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: 200px;
-    padding: 24px;
-    border: 10px solid #333333;
+    padding: 12px;
 }
 
 .cropped-grid-gallery img {
@@ -46,7 +46,7 @@ body {
 }
 
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 body {
@@ -61,7 +61,7 @@ body {
 }
 
 #card-section {
-    background-color: #5b00ed;
+    background-color:lightseagreen;
     color: #bfefff;
     padding: 48px;
 }
@@ -87,6 +87,16 @@ body {
 .card p {
     font-size: 12px;
     margin: 24px 0px 0px;
+}
+
+.cta-button {
+    background-color: red;
+    color: white;
+    border-radius: 36px;
+    padding: 12px 12px;
+    font-size: 16px;
+    font-weight: bold;
+    min-width: 150px;
 }
 
 
