--- a/projects/Restaurant/css/style.css
+++ b/projects/Restaurant/css/style.css
@@ -40,6 +40,8 @@ body {
 
 #navbar #logo {
     margin-right: auto;
+    background-color: #2e2424;
+    padding: 5px;
 }
 
 
@@ -49,7 +51,6 @@ body {
     margin: 72px auto;
     font-size: 12px;
     height: 180vh;
-    text-align: justify;
     padding: 72px;
 }
 
@@ -95,15 +96,22 @@ body {
     text-align: left;
 }
 
-.cropped-grid-gallery {
+.basic-grid-gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 24px;
+    gap: 8px;
+
+    padding: 12px;
     border: 10px solid #333333;
 }
 
-.cropped-grid-gallery img {
+.basic-grid-gallery img {
     width: 100%;
 }
 
+.basic-grid-gallery a {
+    background-color: #2c0303;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
 
