--- a/projects/Restaurant-Site/css/style.css
+++ b/projects/Restaurant-Site/css/style.css
@@ -7,18 +7,7 @@ body {
     font-family: sans-serif;
 }
 
-#hero {
-    background-image: url(../images/variety\ of\ foods.jpg);
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
- 
+
 #navbar {
     background: linear-gradient(to bottom, #231F20,#64672c );
     display: flex;
@@ -26,22 +15,29 @@ body {
     align-items: center; 
 }
 
-#navbar a {
+#navbar a { 
     text-decoration: none;
     color: white;
     padding: 24px;
 }
 
-#navbar img {
-    width: 150px;
-    
+#hero {
+    background-image: url(../images/variety\ of\ foods.jpg);
+    background-size: cover;
+    background-position: center center;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-#navbar #logo {
-    margin-right: auto;
-    background-color: #2e2424;
-    padding: 5px;
+#hero h1 {
+    background-color: aliceblue;
+    color: #64672c;
 }
+ 
 
 
 #two-columns {
@@ -49,23 +45,17 @@ body {
     width: 800px;
     margin: 72px auto;
     font-size: 12px;
-    height: 180vh;
+    height: 100vh;
     padding: 72px;
 }
 
-#two-columns .cta-button {
-    color: white;
-    background-color: rgb(59, 50, 8);
-    
+#two-columns h1 {
+    color: aliceblue;
+    text-align: center;
 }
 
 #two-columns img {
     width: 200px;
-}
-
-#header {
-    position: sticky;
-    top: 0px;
 }
 
 #navbar-bottom {
@@ -80,19 +70,28 @@ body {
     padding: 24px 48px;
 }
 
+#navbar a:hover {
+    background-color: transparent;
+    color: rgb(238, 220, 140);
+}
+
 #footer {
-    background: linear-gradient(to bottom, #231F20,#64672c);
     color: white;
     padding: 48px;
 }
 
-#footer-columns-navbar {
-    width: 800px;
+#footer-navbar {
+    width: 700px;
     margin: 0px right;
     padding: 36px 0px;
     display: flex;
     justify-content: space-between;
     text-align: left;
+}
+
+#footer-navbar a {
+    color: black;
+    text-align: right;
 }
 
 .basic-grid-gallery {
@@ -112,5 +111,75 @@ body {
     background-color: #2c0303;
     color: rgb(255, 255, 255);
     text-align: center;
+}
+
+
+#centered-column {
+    background-color: #333333;
+    width: 90vw;
+    max-width: 800px;
+    margin: 48px auto;
+    display: flex; 
+    flex-wrap: wrap;
+    gap: 36px;
+    justify-content: center;
+}
+
+#two-columns a:hover {
+    background-color: transparent;
+    color: rgb(238, 220, 140);
+
+}
+
+.card {
+    color: aliceblue;
+    width: 350px;
+    border: 2px solid #e4b51c;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: -4px 4px 12px #e0c95f;
+    background: linear-gradient(
+        -50deg, 
+        #585000, 
+        #524e1a, 
+        #ecd866
+    );
+}
+
+.card img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+
+}
+
+.card h2 {
+    font-size: 36px;
+    margin-top: 12px;
+}
+
+.card p {
+    font-size: 18px;
+}
+
+.card a {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(126, 103, 0);
+    display: inline-block;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    border: 3px solid rgb(177, 150, 2);
+    transition:
+        background-color .5s,
+        color .5s;
+}
+
+.card a:hover {
+    background-color: transparent;
+    color: rgb(238, 220, 140);
 }
 
